--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.36",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.1",
