--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-DATABASE_URL ="mongodb+srv://Takimi12:Takimi12@cluster0.yexfi4r.mongodb.net/next13october
-"
+DATABASE_URL ="mongodb+srv://Takimi12:Takimi12@cluster0.yexfi4r.mongodb.net/next13october"
+NEXTAUTH_SECRET = "e-shop-jwt"
+GOOGLE_CLIENT_ID = 149319040479-2st03r0fmunckqosi5njp3q9if30b5h0.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
