--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "stripe": "^14.4.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
   },
