--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.14.17",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
+    "@stripe/react-stripe-js": "^2.3.2",
+    "@stripe/stripe-js": "^2.1.11",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.8.10",
     "@types/react": "18.2.36",
@@ -24,6 +26,7 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.1",
+    "micro": "^10.0.1",
     "moment": "^2.29.4",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
