--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@auth/prisma-adapter": "^1.0.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.17",
+    "@mui/material": "^5.14.18",
+    "@mui/x-data-grid": "^6.18.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@stripe/react-stripe-js": "^2.3.2",
