--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "firebase": "^10.6.0",
     "micro": "^10.0.1",
     "moment": "^2.29.4",
-    "next": "^14.0.3",
+    "next": "13.5",
     "next-auth": "^4.24.4",
     "postcss": "8.4.31",
     "query-string": "^8.1.0",
