--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.5",
@@ -31,13 +30,11 @@
     "firebase": "^10.6.0",
     "micro": "^10.0.1",
     "moment": "^2.29.4",
-    "next": "13.5",
+    "next": "14.0.1",
     "next-auth": "^4.24.4",
     "postcss": "8.4.31",
-    "query-string": "^8.1.0",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
