--- a/package.json
+++ b/package.json
@@ -33,12 +33,16 @@
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "postcss": "8.4.31",
+    "qquery": "^1.1.3",
+    "query": "^0.2.0",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "string": "^3.3.3",
     "stripe": "^14.4.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
