--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "10.4.16",
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.0",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.1",
     "firebase": "^10.6.0",
@@ -37,6 +38,7 @@
     "query": "^0.2.0",
     "query-string": "^8.1.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
